Navigation: User menu: invisible link :bug: fix

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -297,7 +297,7 @@ label.container {
 		height .2s ease-in-out;
 }
 #navigation-user-menu.open {
-	height: 3.75rem;
+	height: 7.5rem;
 }
 
 #navigation-filter {
